# badgify

./: .gitignore  CHANGELOG.md  EXAMPLE_USAGE.md  LICENSE  README.md  README_TESTING.md  pyproject.toml  requirements-dev.txt  setup.py  test_example.py
.github/workflows/: publish.yml
badgify/: __init__.py  apps.py  urls.py  views.py
badgify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_dynamic_badge/: __init__.py  apps.py  generator.py  urls.py  views.py
django_dynamic_badge/templatetags/: dynamic_badge_tags.py
tests/: settings.py  test_basic.py  test_generator.py  urls.py
