[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badgify"
version = "0.1.0"
description = "A Django app to generate beautiful badges dynamically with customizable styles, colors, and labels."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Moeen Dehqan", email = "moeen.dehqan@gmail.com"}
]
maintainers = [
    {name = "Moeen Dehqan", email = "moeen.dehqan@gmail.com"}
]
keywords = [
    "django",
    "badge",
    "svg",
    "generator",
    "template-tag",
    "dynamic-badge",
    "custom-badge"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.10",
]

[project.urls]
Homepage = "https://github.com/moeende/badgify"
Documentation = "https://github.com/moeende/badgify#readme"
Repository = "https://github.com/moeende/badgify.git"
Issues = "https://github.com/moeende/badgify/issues"
Changelog = "https://github.com/moeende/badgify/blob/main/CHANGELOG.md"
Author = "https://github.com/moeende"

[tool.setuptools]
packages = ["badgify", "badgify.templatetags"]

[tool.setuptools.package-data]
badgify = ["*.svg"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
